--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "load-grunt-tasks": "^5.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
-    "ogid": "git+https://github.com/ndxbxrme/ogid.git"
+    "helmet": "^3.21.2",
+    "ogid": "git+https://github.com/ndxbxrme/ogid.git",
+    "pug": "^2.0.4"
   }
 }
